Tested via postman, added postman file
