# handlers/accounts.go
@@ -12,7 +12,7 @@ import (
 )
 
 /*
-swagger:route POST /clients/{client_id}/accounts/new accounts createAccount
+swagger:route POST /clients/{client_id}/accounts accounts createAccount
 Return the id of the new account including the details of it
 responses:
 	201: accountResponse
@@ -22,17 +22,19 @@ responses:
 CreateAccount handles POST request and returns the AccountID of the new Account
 */
 func (a *Handlers) CreateAccount(w http.ResponseWriter, r *http.Request) {
-	a.l.Println("Handling POST Accounts /clients/:id/accounts/new")
+	u.LogInfo("Handling POST Accounts /clients/:client_id/accounts")
 
 	clientId, err := strconv.Atoi(mux.Vars(r)["client_id"])
 	if err != nil {
-		a.l.Println(err)
+		u.LogDebug("CreateAccount Handler", err)
+		u.RespondWithError(w, http.StatusBadRequest, "Invalid client_id")
+		return
 	}
 
 	var v *data.Account
 	decoder := json.NewDecoder(r.Body)
 	if err := decoder.Decode(&v); err != nil {
-		a.l.Println("Error decoding data", err)
+		u.LogDebug("Error decoding data", err)
 		u.RespondWithError(w, http.StatusBadRequest, "Invalid request payload")
 		return
 	}
@@ -42,7 +44,7 @@ func (a *Handlers) CreateAccount(w http.ResponseWriter, r *http.Request) {
 	defer r.Body.Close()
 
 	if err := data.CreateAccount(a.db, v); err != nil {
-		a.l.Println(err)
+		u.LogDebug(err)
 		u.RespondWithError(w, http.StatusInternalServerError, err.Error())
 		return
 	}
@@ -53,7 +55,7 @@ func (a *Handlers) CreateAccount(w http.ResponseWriter, r *http.Request) {
 swagger:route GET /clients/{client_id}/accounts/{account_id} accounts getAccount
 Return the id of the new client
 responses:
-	200: accountResponse
+	200: accountGetResponse
 	400: badRequestErrorResponse
 	404: notFoundErrorResponse
 	500: internalErrorResponse
@@ -62,12 +64,13 @@ GetAccount handles GET requests and returns the details of the requested Account
 **{client_id} should be replaced by an authentication token (JWT) and validated with middleware.
 */
 func (a *Handlers) GetAccount(w http.ResponseWriter, r *http.Request) {
-	a.l.Println("Handling GET Account")
+	u.LogInfo("Handling GET Accounts /clients/:client_id/accounts/:account_id")
 
 	var v *data.Account
 	vars := mux.Vars(r)
 	accountId, err := strconv.Atoi(vars["account_id"])
 	if err != nil {
+		u.LogDebug("GetAccount Handler: ", err)
 		u.RespondWithError(w, http.StatusBadRequest, "Invalid account ID")
 		return
 	}
@@ -77,8 +80,10 @@ func (a *Handlers) GetAccount(w http.ResponseWriter, r *http.Request) {
 	if err := data.GetAccount(a.db, v); err != nil {
 		switch err {
 		case sql.ErrNoRows:
+			u.LogDebug("GetAccount Handler: ", err)
 			u.RespondWithError(w, http.StatusNotFound, "This item was not found")
 		default:
+			u.LogDebug("GetAccount Handler: ", err)
 			u.RespondWithError(w, http.StatusInternalServerError, err.Error())
 		}
 		return
@@ -88,7 +93,7 @@ func (a *Handlers) GetAccount(w http.ResponseWriter, r *http.Request) {
 }
 
 /*
-swagger:route GET /clients/{client_id}/accounts/ accounts getAccounts
+swagger:route GET /clients/{client_id}/accounts accounts getAccounts
 Return a list of the accounts listed by the {client_id}
 responses:
 	200: accountsResponse
@@ -99,29 +104,21 @@ GetAccounts handles GET requests and returns a list of the accounts listed by a 
 **{client_id} should be replaced by an authentication token (JWT) and validated with middleware.
 */
 func (a *Handlers) GetAccounts(w http.ResponseWriter, r *http.Request) {
-	a.l.Println("Handling GET Accounts")
+	u.LogInfo("Handling GET Accounts /clients/:client_id/accounts")
 
-	// var v *data.Account
 	clientId, err := strconv.Atoi(mux.Vars(r)["client_id"])
 	if err != nil {
+		u.LogDebug("GetAccounts Handler:", err)
 		u.RespondWithError(w, http.StatusBadRequest, "Invalid client ID")
+		return
 	}
-
-	// v = &data.Account{ClientId: uint64(clientId)}
 
 	accounts := data.GetAccounts(a.db, clientId)
 	if accounts == nil {
+		u.LogDebug("GetAccounts Handler:", err)
 		u.RespondWithError(w, http.StatusNotFound, err.Error())
 		return
 	}
 
 	u.RespondWithJSON(w, http.StatusOK, accounts)
 }
-
-/*
-	v := Decimal{}
-
-	v.ParseDecimal(fmt.Sprintf("%s %s", p.Currency, p.Balance))
-
-	log.Println(v.Amount, v.Money)
-*/
